--- a/package.json
+++ b/package.json
@@ -6,19 +6,30 @@
   "scripts": {
     "build": "webpack",
     "build:watch": "webpack -w",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "tslint -p tsconfig.json -t msbuild ./src/**/*.{ts,tsx}",
+    "lint-fix": "tslint -p tsconfig.json -t msbuild --fix ./src/**/*.{ts,tsx}"
   },
   "keywords": [],
   "author": "Krzysztof Zbiciński",
   "license": "MIT",
   "devDependencies": {
     "@types/socket.io-client": "^1.4.32",
+    "husky": "^1.0.0-rc.2",
     "ts-loader": "^4.1.0",
+    "tslint": "^5.9.1",
+    "tslint-config-prettier": "^1.12.0",
+    "tslint-config-standard": "^7.0.0",
     "typescript": "^2.8.1",
     "webpack": "^4.4.1",
     "webpack-cli": "^2.0.13"
   },
   "dependencies": {
     "socket.io-client": "^2.1.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint"
+    }
   }
 }
